--- a/html/autoriz-page.html
+++ b/html/autoriz-page.html
@@ -8,7 +8,7 @@
 		<!-- <link href="D:\Documents\PHP\PHP-academy\css\cv-style.css" rel="stylesheet"/> -->
 	</head>
 	<body>
-		<a href="/PHP-academy/index.html"><div class = "home-btn">Home</div></a>
+		<a href="/PHP-academy/index.html"><div class = "home-btn" id = "fixed">Home</div></a>
 		<div>
 			<h3>Login information</h3>			
 		</div>
