--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class = "main_menu">
 				<a href="/PHP-academy/html/CV-Kirilenko.html"><div>CV</div></a>
 				<a href="/PHP-academy/html/homeworks.html"><div>Homeworks</div></a>
-				<a href="/PHP-academy/html/contackt.html"><div>Contact</div></a>
+				<a href="#"><div>Contact</div></a>
 				<a href="/PHP-academy/html/autoriz-page.html"><div>Sing in</div></a>
 			</div>
 			<hr>
