Add a homework by 24/12/2016

--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -14,10 +14,14 @@
 			<h3>List of homeworks</h3>
 			<hr>
 			<div class = "main_menu">
-				<a href="/PHP-academy/php/php-basic-tasks/task1.php"><div class = "hw-btn">20161218 PHP basic task (Oleg Shumar)</div></a>
+				<a href="/PHP-academy/php/php-basic-tasks/task1.php"><div class = "hw-btn">20161218 PHP basic task</div></a>
 				<a href="/PHP-academy/php/20161218-hw-devionity.php"><div class = "hw-btn">20161218 <br> PHP Devionity</div></a>
-				<a href="#"><div class = "hw-btn">Another one..</div></a>
+				<a href="/PHP-academy/php/arrays_loops_tasks"><div class = "hw-btn">20161218 Arrays loops tasks</div></a>
 				<a href="#"><div class = "hw-btn">And other...</div></a>
+				<a href="#"><div class = "hw-btn">And other...</div></a>
+				<a href="#"><div class = "hw-btn">And other...</div></a>
+				<a href="#"><div class = "hw-btn">And other...</div></a>
+				<a href="https://www.codecademy.com/users/ihorskirilenko/achievements" target="_blank"><div class = "hw-btn">Achievments of codecademy</div></a>
 			</div>
 			<hr>
 		</div>
