Add homework by 24/12/2016, part 2

--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -16,8 +16,8 @@
 			<div class = "main_menu">
 				<a href="/PHP-academy/php/php-basic-tasks/task1.php"><div class = "hw-btn">20161218 PHP basic task</div></a>
 				<a href="/PHP-academy/php/20161218-hw-devionity.php"><div class = "hw-btn">20161218 <br> PHP Devionity</div></a>
-				<a href="/PHP-academy/php/arrays_loops_tasks"><div class = "hw-btn">20161218 Arrays loops tasks</div></a>
-				<a href="#"><div class = "hw-btn">And other...</div></a>
+				<a href="/PHP-academy/php/arrays_loops_tasks"><div class = "hw-btn">20161224 Arrays loops tasks</div></a>
+				<a href="/PHP-academy/php/20161224-hw-devionity.php"><div class = "hw-btn">20161224 <br> PHP Devionity</div></a>
 				<a href="#"><div class = "hw-btn">And other...</div></a>
 				<a href="#"><div class = "hw-btn">And other...</div></a>
 				<a href="#"><div class = "hw-btn">And other...</div></a>
