--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -15,11 +15,13 @@
 			<hr>
 			<div class = "main_menu">
 				<a href="/PHP-academy/php/php-basic-tasks/task1.php"><div class = "hw-btn">20161218 PHP basic task</div></a>
-				<a href="/PHP-academy/php/20161218-hw-devionity.php"><div class = "hw-btn">20161218 <br> PHP Devionity</div></a>
+				<a href="/PHP-academy/php/20161218-hw-devionity.php"><div class = "hw-btn">20161218<br>PHP Devionity</div></a>
 				<a href="/PHP-academy/html/20161224-arrays-loops-tasks.html"><div class = "hw-btn">20161224 Arrays loops tasks</div></a>
-				<a href="/PHP-academy/php/20161224-hw-devionity.php"><div class = "hw-btn">20161224 <br> PHP Devionity</div></a>
+				<a href="/PHP-academy/php/20161224-hw-devionity.php"><div class = "hw-btn">20161224<br>PHP Devionity</div></a>
 				<a href="/PHP-academy/html/20170114-functions_forms_tasks.html"><div class = "hw-btn">20170114 Functions forms tasks</div></a>
-				<a href="/PHP-academy/html/20170114-devionity.html"><div class = "hw-btn">20170114 <br> PHP Devionity</div></a>
+				<a href="/PHP-academy/html/20170114-devionity.html"><div class = "hw-btn">20170114<br>PHP Devionity</div></a>
+				<a href="/PHP-academy/html/20170119-animation.html"><div class = "hw-btn">20170118<br>Animation</div></a>
+				<a href="/PHP-academy/html/20170121-functions_forms_tasks.html"><div class = "hw-btn">20170121 Functions forms tasks</div></a>
 				<a href="https://www.codecademy.com/users/ihorskirilenko/achievements" target="_blank"><div class = "hw-btn">Achievments of codecademy</div></a>
 			</div>
 			<hr>
