--- a/html/CV-Kirilenko.html
+++ b/html/CV-Kirilenko.html
@@ -17,7 +17,7 @@
 			<!-- Контакты -->
 			<table class="par_table" id="par_header1">
 				<tr>
-					<td id="par_header2" rowspan="8"><img src="/PHP-academy/images/photo300x400.jpg" width="150" height="200" alt="Фото"/></td>
+					<td id="par_header2" rowspan="8"><img src="/PHP-academy/images/main-photo.jpg" width="200" alt="Фото"/></td>
 					<td id="par_header3">ФИО:</td>
 					<td id="par_header4">Кириленко Игорь Сергеевич</td>
 				</tr>
@@ -56,8 +56,8 @@
 					<td>
 						<h2>Цель</h2>
 						<ul>
-							<li>Работа в сфере управления проектами, оптимизации бизнес-процессов, развития новых направлений бизнеса;</li>
-							<li>Профессиональное развитие в области управления проектами и бизнес-процессами.</li>
+							<li>Получить должность WEB-разработчика;</li>
+							<li>Профессиональное развитие в области WEB-разработки.</li>
 						</ul>
 					</td>
 				</tr>
@@ -68,6 +68,7 @@
 					<td>
 						<h2>Профессиональная квалификация:</h2>
 						<ul>
+							<li>Знание технологий: PHP, HTML, CSS, JavaScript</li>
 							<li>Знание методологии, навыки управления проектами;</li>
 							<li>Знание финансового учета и планирования;.</li>
 							<li>Знание экономики и бизнес-процессов производственных и торговых предприятий.</li>
@@ -162,7 +163,7 @@
 				</tr>
 				<tr>
 					<td class="par_cell1">Роль:</td>
-					<td>Руководитель группы внедрения (8 участников)</td>
+					<td>Руководитель проекта (5 участников)</td>
 				</tr>
 				<tr>
 					<td class="par_cell1">Описание и результат:</td>
@@ -266,28 +267,32 @@
 					<td colspan="2"><h2>Курсы и тренинги:</h2></td>
 				</tr>
 				<tr>
-					<td class="par_cell1">2005</td>
-					<td>Учебный центр «Успех», курсы бухгалтеров, бухгалтерский и налоговый учет в Украине.</td>
+					<td class="par_cell1">2016.12 - наст. время</td>
+					<td>Учебный центр PHP-Academy, курс Full Stack WEB developer.</td>
 				</tr>
 				<tr>
-					<td class="par_cell1">2008</td>
-					<td>Международная сертификация бухгалтеров и аудиторов по программе CAP/CIPA, «Управленческий учет-1» (сдан), «Финансовый учет-1» (сдан).</td>
-				</tr>
-				<tr>
-					<td class="par_cell1">2008</td>
-					<td>Тренинг-центр «ТНТ», тренинг «Технология эффективных длинных продаж».</td>
-				</tr>
-				<tr>
-					<td class="par_cell1">2012</td>
-					<td>Международная сертификация бухгалтеров и аудиторов по программе CAP/CIPA, «Налоги» (сдан).</td>
+					<td class="par_cell1">2013</td>
+					<td>Учебный центр «Сетевые технологии», тренинг «Методология управления проектами и особенности бизнес-практики».</td>
 				</tr>
 				<tr>
 					<td class="par_cell1">2013</td>
 					<td>European Business Association, тренинг «Школа переговоров».</td>
 				</tr>
 				<tr>
-					<td class="par_cell1">2013</td>
-					<td>Учебный центр «Сетевые технологии», тренинг «Методология управления проектами и особенности бизнес-практики».</td>
+					<td class="par_cell1">2012</td>
+					<td>Международная сертификация бухгалтеров и аудиторов по программе CAP/CIPA, «Налоги» (сдан).</td>
+				</tr>
+				<tr>
+					<td class="par_cell1">2008</td>
+					<td>Тренинг-центр «ТНТ», тренинг «Технология эффективных длинных продаж».</td>
+				</tr>
+				<tr>
+					<td class="par_cell1">2008</td>
+					<td>Международная сертификация бухгалтеров и аудиторов по программе CAP/CIPA, «Управленческий учет-1» (сдан), «Финансовый учет-1» (сдан).</td>
+				</tr>
+				<tr>
+					<td class="par_cell1">2005</td>
+					<td>Учебный центр «Успех», курсы бухгалтеров, бухгалтерский и налоговый учет в Украине.</td>
 				</tr>
 			</table>
 			<!-- Доп инфо -->
@@ -300,7 +305,7 @@
 					<ul>
 						<li>Русский – свободно;</li>
 						<li>Украинский – свободно;</li>
-						<li>Английский – базовый разговорный уровень.</li>
+						<li>Английский – pre-intermediate.</li>
 					</ul>
 					</td>
 				</tr>
